cookie z-index fix

--- a/src/blocks/components/cookie/cookie.scss
+++ b/src/blocks/components/cookie/cookie.scss
@@ -11,7 +11,7 @@
     background-color: $c-white;
     border-radius: 4px;
     padding: 12px 24px;
-    z-index: 99;
+    z-index: 10200;
     box-shadow: 0px 0px 25px -10px rgba(0, 0, 0, 0.5);
 
     @include max(laptop) {
